--- a/main.tex
+++ b/main.tex
@@ -5765,7 +5765,7 @@ kein algebraischer Abschluss von $\QQ$ ist: Die Erweiterung $\CC|\QQ$ ist nicht 
 \end{bsp}
 
 \noindent\textbf{Ausblick:} In der Galoistheorie werden wir für sogenannte \emph{endliche Galoiserweiterungen} $L|K$ eine Korrespondenz zwischen der Menge der Zwischenkörper von $L|K$ und der Menge der Untergruppen von $\Aut_K(L)$ etablieren. Endliche Galoiserweiterungen $L|K$ erfüllen die Gleichung $[L:K] = |\Aut_K(L)|$, endliche algebraische Erweiterungen im Allgemeinen jedoch nicht.
-Für einen algebraischen Abschluss $\overline{K}$ von $K$ kann man zeigen:
+Für einen algebraischen Abschluss $\overline{K}$ von $K$ und eine endliche Körpererweiterung $L|K$ kann man zeigen:
 \[
 |\Aut_K(L)| \; \leq \; |\Hom_K(L,\overline{K})| \; \leq \; [L:K].
 \]
